vlib/v/checker/tests/var_option_wrong_default.vv
var1 := ?int(none)

var2 := var1 or { var1? }
var3 := var1 or { var1 }

println(var2)
println(var3)
